syntax = "proto2";
package PROTOBUF;

// 道具信息
message PB_Item
{
	optional uint32 item_id 	= 1;
	optional uint32 item_number = 2;
}
message PB_ItemList
{
	repeated PB_Item item_list = 1;
}
